# vlintt

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: dependency-review.yml  general.yml  links.yml  pre-commit.yml  scorecard.yml  typos.yml
src/: main.rs
src/parser/: mod.rs  tests.rs
