[package]
name = "vlintt"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
description = "Lint Web Video Text Tracks Format (WebVTT) files"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/vlintt"
homepage = "https://rodneylab.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
nom = { version = "7.1.1", features = ["alloc"]}
