[package]
name = "vlintt"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
homepage = "https://rodneylab.com"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/vlintt"
description = "Lint Web Video Text Tracks Format (WebVTT) files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
nom = { version = "7.1.3", features = ["alloc"] }
textwrap = "0.16.0"
