[package]
name = "vlintt"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
homepage = "https://rodneylab.com"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/vlintt"
# clap 4.5 raises MSRV to 1.74
rust-version = "1.74"
description = "Lint Web Video Text Tracks Format (WebVTT) files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nom = { version = "8.0.0", features = ["alloc"] }
textwrap = "0.16.1"
